--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-jsx": "^3.3.0"
+    "react-input-slider": "^5.1.7",
+    "styled-components": "^5.1.1",
+    "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.41",
+    "@types/styled-components": "^5.1.0",
+    "@types/tinycolor2": "^1.4.2",
     "del-cli": "^3.0.1",
     "next": "^9.4.4",
     "prettier": "^2.0.5",
