--- a/package.json
+++ b/package.json
@@ -41,15 +41,22 @@
     "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.1.0",
     "@types/react": "^16.9.41",
     "@types/styled-components": "^5.1.0",
     "@types/tinycolor2": "^1.4.2",
+    "babel-plugin-styled-components": "^1.10.7",
     "del-cli": "^3.0.1",
     "next": "^9.4.4",
     "prettier": "^2.0.5",
     "rollup": "^2.19.0",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^6.1.0",
-    "rollup-plugin-typescript2": "^0.27.1",
     "semantic-ui-react": "^0.88.2",
     "typedoc": "^0.17.0-3",
     "typescript": "^3.9.6"
