Update publish config

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "dist/index.js",
   "browser": "dist/index.js",
   "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c",
+    "build": "npm run build:js && npm run build:types",
+    "build:js": "cross-env NODE_ENV=production rollup -c",
+    "build:types": "tsc --emitDeclarationOnly",
     "watch": "rollup -cw",
     "clean": "del-cli dist",
     "prettify": "prettier --write ./**/*.{ts,tsx}",
@@ -53,6 +56,7 @@
     "@types/styled-components": "^5.1.0",
     "@types/tinycolor2": "^1.4.2",
     "babel-plugin-styled-components": "^1.10.7",
+    "cross-env": "^7.0.2",
     "del-cli": "^3.0.1",
     "next": "^9.4.4",
     "prettier": "^2.0.5",
