--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -14,16 +14,5 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": [
-    "./next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "../lib/HueSlider.tsx",
-    "../lib/HueSaturationBrightnessInput.tsx",
-    "../lib/utils.ts",
-    "../lib/NumberInput.tsx",
-    "../lib/SaturationBrightnessPanel.tsx",
-    "../lib/InputGroups.tsx",
-    "../lib/SaturationBrightnessEventHandler.ts"
-  ]
+  "include": ["./next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
