--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-input-slider": "^5.1.7",
-    "styled-components": "^5.1.1",
     "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
@@ -63,7 +62,11 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^6.1.0",
     "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.1.1",
     "typedoc": "^0.17.0-3",
     "typescript": "^3.9.6"
+  },
+  "peerDependencies": {
+    "styled-components": ">= 3"
   }
 }
