--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
   },
   "homepage": "https://github.com/arch-inc/react-color-modal#readme",
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-input-slider": "^5.1.7",
     "tinycolor2": "^1.4.1"
   },
@@ -57,6 +55,8 @@
     "del-cli": "^3.0.1",
     "next": "^9.4.4",
     "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rollup": "^2.19.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^6.1.0",
@@ -66,6 +66,8 @@
     "typescript": "^3.9.6"
   },
   "peerDependencies": {
-    "styled-components": ">= 3"
+    "react": ">=16.8",
+    "react-dom": ">=16.8",
+    "styled-components": ">=3"
   }
 }
