--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "12.x"
+          registry-url: https://registry.npmjs.org/
       - name: Cache dependencies
         uses: actions/cache@v1
         with:
