--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "babel-plugin-styled-components": "^1.10.7",
     "cross-env": "^7.0.2",
     "del-cli": "^3.0.1",
-    "next": "^9.5.5",
+    "next": "^10.2.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -63,7 +64,7 @@
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1",
     "typedoc": "^0.17.0-3",
-    "typescript": "^3.9.6"
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "react": ">=16.8",
