Update npm scripts and close #13.

--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build:js && npm run build:types",
+    "build": "run-s build:lib next",
+    "build:docs": "run-s next typedoc",
+    "build:lib": "npm run build:js && npm run build:types",
     "build:js": "cross-env NODE_ENV=production rollup -c",
     "build:types": "tsc --emitDeclarationOnly",
-    "watch": "rollup -cw",
-    "clean": "del-cli dist",
+    "clean": "run-p clean:*",
+    "clean:docs": "del-cli docs/out",
+    "clean:lib": "del-cli dist",
+    "dev": "run-p next:dev watch",
+    "next:build": "next build ./docs",
+    "next:dev": "next ./docs",
+    "next:export": "next export ./docs",
+    "next:start": "next start ./docs",
     "prettify": "prettier --write ./**/*.{ts,tsx}",
-    "dev-pages": "next ./docs",
-    "build-pages": "next build ./docs",
-    "start-pages": "next start ./docs",
-    "export-pages": "next export ./docs",
-    "build-docs": "typedoc --mode library --excludeExternals --excludeNotExported --excludePrivate --excludeProtected --out ./docs/out/api ./lib/index.ts"
+    "typedoc": "typedoc --mode library --excludeExternals --excludeNotExported --excludePrivate --excludeProtected --out ./docs/out/api ./lib/index.ts",
+    "watch": "rollup -cw"
   },
   "repository": {
     "type": "git",
