--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
+          node-version: "14.x"
           registry-url: https://registry.npmjs.org/
       - name: Cache dependencies
         uses: actions/cache@v1
@@ -24,7 +24,7 @@ jobs:
             ${{ runner.os }}-node-
       - run: npm ci
       - name: Build package
-        run: npm run build
+        run: npm run build:lib
       - name: Publish package
         run: npm publish --access public
         env:
