--- a/package.json
+++ b/package.json
@@ -48,29 +48,30 @@
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/react": "^16.9.41",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
     "@types/styled-components": "^5.1.0",
     "@types/tinycolor2": "^1.4.2",
-    "babel-plugin-styled-components": "^1.10.7",
-    "cross-env": "^7.0.2",
-    "del-cli": "^3.0.1",
-    "next": "^12.0.9",
+    "babel-plugin-styled-components": "^2.1.4",
+    "cross-env": "^7.0.3",
+    "del-cli": "^5.1.0",
+    "next": "^13.5.6",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.77.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^7.0.2",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.1.1",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5"
+    "typedoc": "^0.25.8",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "react": ">=16.8",
