--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
